--- a/src/components/GoogleBtnSignUp/GoogleBtnSignUp.module.css
+++ b/src/components/GoogleBtnSignUp/GoogleBtnSignUp.module.css
@@ -10,6 +10,7 @@
   letter-spacing: -0.14px;
   text-align: center;
   height: 46px;
+  /* width: 311px; */
   padding: 14px 28px;
   border: 1px solid var(--dark-blue);
   color: var(--dark-blue);
@@ -42,7 +43,6 @@
 
 @media screen and (min-width: 768px) {
   .Google {
-    width: 436px;
     font-size: 16px;
   }
 }
