--- a/src/components/LogOutModal/LogOutModal.module.css
+++ b/src/components/LogOutModal/LogOutModal.module.css
@@ -1,10 +1,10 @@
 /* Mobile 320px */
 .modalBox {
+  width: 316px;
   margin: 40px 14px;
   display: grid;
   justify-content: center;
   align-content: center;
-  gap: 16px;
 }
 
 .modalTitle {
@@ -17,6 +17,7 @@
 }
 
 .modalText {
+  margin-top: 16px;
   color: var(--dark-blue);
   font-weight: 400;
   font-size: 14px;
@@ -34,7 +35,8 @@
 }
 
 .btn {
-  width: 100%;
+  width: 304px;
+  height: 46px;
   padding: 14px 0;
   display: flex;
   justify-content: center;
@@ -42,7 +44,7 @@
   color: var(--dark-blue);
   font-weight: 700;
   font-size: 14px;
-  line-height: 1.3;
+  line-height: 1.29;
   letter-spacing: 0.09em;
   text-align: center;
   border-radius: 30px;
@@ -59,23 +61,25 @@
 }
 
 .colorBtn:active {
-  color: var(--light-grey-disable);
+  color: var(--light-gray);
   background-color: transparent;
 }
 
 .transparentBtn {
-  color: var(--light-gray-disable);
+  color: #323f474d;
   background-color: var(--light-gray);
 }
 
-.transparentBtn:hover {
+.transparentBtn:hover,
+.transparentBtn:focus {
   color: var(--dark-blue);
 }
 
 /* Tablet 768px */
 @media screen and (min-width: 768px) {
   .modalBox {
-    padding: 40px;
+    width: 436px;
+    margin: 40px 0;
   }
 
   .modalTitle {
@@ -85,22 +89,30 @@
   }
 
   .modalText {
-    padding: 14px 40px;
     font-size: 18px;
     line-height: 1.33;
   }
 
   .btnBox {
-    margin-top: 14px;
+    margin: 24px 39px 0 39px;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    justify-items: center;
     gap: 10px;
   }
 
   .btn {
+    height: 60px;
     padding: 18px 0;
     font-size: 16px;
     line-height: 1.5;
+  }
+
+  .colorBtn {
+    width: 173px;
+  }
+
+  .transparentBtn {
+    width: 176px;
   }
 }
