--- a/src/components/WaterMainInfo/WaterMainInfo.module.css
+++ b/src/components/WaterMainInfo/WaterMainInfo.module.css
@@ -28,10 +28,22 @@
     background-size: 374px 477px;
   }
   .container {
-    padding: 33px 33px 60px 33px;
+    padding: 33px 33px 45px 33px;
   }
   .title {
     font-size: 24px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .section {
+    width: 672px;
+    min-height: calc(100vh - 64px);
+    background-size: 472px 604px;
+  }
+  .title {
+    line-height: 24px;
+    letter-spacing: -0.24px;
   }
 }
 
