--- a/src/components/WaterMainInfo/WaterMainInfo.module.css
+++ b/src/components/WaterMainInfo/WaterMainInfo.module.css
@@ -28,7 +28,7 @@
     background-size: 374px 477px;
   }
   .container {
-    padding: 33px 33px 45px 33px;
+    padding: 33px 33px 45px;
   }
   .title {
     font-size: 24px;
@@ -38,7 +38,7 @@
 @media screen and (min-width: 1440px) {
   .section {
     width: 672px;
-    height: calc(100vh - 64px);
+    min-height: calc(100vh - 64px);
     background-size: 472px 604px;
   }
   .title {
