--- a/src/components/AdvantagesSection/AdvantagesSection.module.css
+++ b/src/components/AdvantagesSection/AdvantagesSection.module.css
@@ -1,5 +1,7 @@
 .advantages {
-  width: 340px;
+  /* width: 340px; */
+  width:100%;
+
   border-radius: 30px;
   background-image: url('https://res.cloudinary.com/dwyxffoux/image/upload/v1/t4qxv1yretc1celrttux');
   background-size: cover;
@@ -120,7 +122,8 @@
 /* Tablet */
 @media screen and (min-width: 768px) {
   .advantages {
-    width: 704px;
+/* width:100%;
+    min-width: 704px; */
     background-image: url('https://res.cloudinary.com/dwyxffoux/image/upload/v1/ncrpeodjj9zflxafe1xb');
     min-height: 440px;
     padding: 32px;
@@ -170,7 +173,7 @@
 @media screen and (min-width: 1280px) {
   .advantages {
     width: 672px;
-    min-height: 754px;
+    min-height: calc(100vh - 64px);
     background-image: url('https://res.cloudinary.com/dwyxffoux/image/upload/v1/jbfi4mcwyi6qc8s4ycpi');
   }
 
