--- a/src/components/AdvantagesSection/AdvantagesSection.module.css
+++ b/src/components/AdvantagesSection/AdvantagesSection.module.css
@@ -1,25 +1,30 @@
 .advantages {
-  /* width: 340px; */
-  width:100%;
-
+  display: block;
+  width: 100%;
+  max-width: 100%;
   border-radius: 30px;
+  background: var(--light-gray);
+  padding: 32px 16px;
+  text-align: left;
+  align-self: center;
   background-image: url('https://res.cloudinary.com/dwyxffoux/image/upload/v1/t4qxv1yretc1celrttux');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  padding: 24px 16px;
 }
 
 .customersContainer {
-  display: inline-flex;
+  display: block;
+  /* display: flex;
   padding: 10px 14px;
   align-items: center;
   border-radius: 30px;
+  gap: 4px;
   background: var(--white);
   box-shadow: 0 4px 50px rgba(0, 0, 0, 0.1);
   margin-top: 209px;
   height: 48px;
-  gap: 4px;
+  box-sizing: border-box; */
 }
 
 .customersList {
@@ -55,13 +60,19 @@
 }
 
 .benefits {
-  display: flex;
+  display: block; /* Temporary change to block for debugging */
   width: 168px;
+  margin-left: auto; /* Aligns benefits to the right */
+  /* display: flex;
+  flex-wrap: wrap;
+  width: 168px;
+  justify-content: end;
   align-items: flex-start;
   align-content: flex-start;
   gap: 4px;
-  flex-wrap: wrap;
-  margin-left: 160px;
+
+  margin-left: auto;
+  box-sizing: border-box; */
 }
 
 .habitContainer {
@@ -93,7 +104,7 @@
 
 .statistics,
 .setting {
-  display: flex;
+  display: block;
   padding: 9px 12px;
   justify-content: center;
   align-items: center;
@@ -122,10 +133,8 @@
 /* Tablet */
 @media screen and (min-width: 768px) {
   .advantages {
-/* width:100%;
-    min-width: 704px; */
     background-image: url('https://res.cloudinary.com/dwyxffoux/image/upload/v1/ncrpeodjj9zflxafe1xb');
-    min-height: 440px;
+
     padding: 32px;
   }
 
@@ -148,7 +157,6 @@
 
   .benefits {
     width: 242px;
-    margin-left: auto;
     margin-top: -20px;
     gap: 10px;
   }
