--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,11 @@
-/* @import-normalize; */
-/* bring in normalize.css styles *, */
+@import-normalize; /* bring in normalize.css styles */
 
+*,
 *::before,
 *::after {
   box-sizing: border-box;
 }
+
 
 :root {
   font-family: Poppins, Gilroy, system-ui, Helvetica, Arial, sans-serif;
@@ -29,7 +30,10 @@ body {
   font-family: Poppins, Gilroy, system-ui, Helvetica, Arial, sans-serif;
   color: #2f2f2f;
   background-color: #fff;
+  margin: 0;
+  padding: 16px;
 }
+
 
 body::-webkit-scrollbar {
   width: 0;
