--- a/src/components/NotificationSignIn/NotificationSignIn.module.css
+++ b/src/components/NotificationSignIn/NotificationSignIn.module.css
@@ -1,7 +1,7 @@
 .customToast {
-  background: #323f47;
+  background: #f0eff4;
   color: #721c24;
-
+  border: 1px solid #2f2f2f;
   border-radius: 10px;
   padding: 1rem;
 }
