tracker page styles fixed

--- a/src/pages/TrackerPage/TrackerPage.module.css
+++ b/src/pages/TrackerPage/TrackerPage.module.css
@@ -1,6 +1,7 @@
 @media screen and (min-width: 1440px) {
   .container {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 32px;
   }
 }
