--- a/src/components/UserSettingsModal/UserSettingsModal.module.css
+++ b/src/components/UserSettingsModal/UserSettingsModal.module.css
@@ -2,13 +2,12 @@
     max-width: 337px;
     text-align: left;
     margin: 0 auto;
+    background-color: var(--white);
 }
 
 .settingsHeader{
     margin-bottom: 20px;
 }
-
-
 
 @media only screen and (min-width: 768px) {
    .modalContainer{
