--- a/src/components/WelcomeSection/WelcomeSection.module.css
+++ b/src/components/WelcomeSection/WelcomeSection.module.css
@@ -1,11 +1,12 @@
 .welcome {
-  width: 340px;
+  max-width: 343px;
   border-radius: 30px;
   background: var(--light-gray);
   padding: 24px 16px;
   text-align: left;
   align-self: center;
 }
+
 .logo {
   margin-bottom: 74px;
 }
@@ -28,9 +29,10 @@
   letter-spacing: -0.38px;
   margin-bottom: 32px;
 }
+
 .nav {
   display: flex;
-  width: 300px;
+  max-width: 300px;
   flex-wrap: wrap;
   justify-content: flex-start;
   align-items: flex-start;
@@ -101,9 +103,10 @@
 /* Tablet */
 @media screen and (min-width: 768px) {
   .welcome {
-    width: 704px;
+    min-width: 704px;
     padding: 32px;
   }
+
   .subheader {
     font-size: 16px;
     line-height: 1.5;
@@ -111,12 +114,14 @@
     margin-bottom: 16px;
     padding-left: 32px;
   }
+
   .header {
     font-size: 64px;
     line-height: 1.09;
     letter-spacing: -0.64px;
     padding-left: 32px;
   }
+
   .logo {
     margin-bottom: 50px;
   }
@@ -128,11 +133,12 @@
   }
 
   .nav {
-    width: 400px;
+    min-width: 400px;
     gap: 16px;
     margin-bottom: 28px;
     padding-left: 32px;
   }
+
   .signin,
   .signup {
     padding: 18px 40px;
@@ -160,6 +166,7 @@
     line-height: 0.95;
     letter-spacing: -0.8px;
   }
+
   .logo {
     margin-bottom: 132px;
   }
