--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
   --dark-blue: #323f47;
   --light-green: #9be1a0;
   --light-green-hover: #87d28d;
+  --light-dark-green: #5aab62;
   --white: #ffffff;
   --white-disabled: #e6e6e6;
   --light-gray: #f0eff4;
