--- a/src/components/AdvantagesSection/AdvantagesSection.module.css
+++ b/src/components/AdvantagesSection/AdvantagesSection.module.css
@@ -1,5 +1,5 @@
 .advantages {
-  width: 340px;
+  max-width: 343px;
   border-radius: 30px;
   background-image: url('https://res.cloudinary.com/dwyxffoux/image/upload/v1/t4qxv1yretc1celrttux');
   background-size: cover;
@@ -120,7 +120,7 @@
 /* Tablet */
 @media screen and (min-width: 768px) {
   .advantages {
-    width: 704px;
+    min-width: 704px;
     background-image: url('https://res.cloudinary.com/dwyxffoux/image/upload/v1/ncrpeodjj9zflxafe1xb');
     min-height: 440px;
     padding: 32px;
@@ -167,7 +167,7 @@
 
 /* Desktop */
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1440px) {
   .advantages {
     width: 672px;
     min-height: 754px;
