--- a/src/components/UserSettingsForm/UserSettingsForm.module.css
+++ b/src/components/UserSettingsForm/UserSettingsForm.module.css
@@ -172,6 +172,10 @@
     font-weight: 400;
     line-height: 1.28em;
 }
+.warninIcon{
+  color: #EF5050;
+  margin-left: 5px;
+}
 
 @media only screen and (min-width: 768px) {
 
