calandar style fix

--- a/src/components/Calendar/Calendar.module.css
+++ b/src/components/Calendar/Calendar.module.css
@@ -1,5 +1,14 @@
 .listDays {
   display: flex;
   flex-wrap: wrap;
-  gap: 18px;
+  gap: 20px 17px;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (min-width: 768px) {
+  .listDays {
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
 }
