--- a/src/components/AdvantagesSection/AdvantagesSection.module.css
+++ b/src/components/AdvantagesSection/AdvantagesSection.module.css
@@ -171,7 +171,7 @@
 
 @media screen and (min-width: 1280px) {
   .advantages {
-    width: 672px;
+    min-width: 672px;
     min-height: 754px;
     background-image: url('https://res.cloudinary.com/dwyxffoux/image/upload/v1/jbfi4mcwyi6qc8s4ycpi');
   }
