--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,6 +1,20 @@
+/* HomePage.module.css */
+@keyframes fadeInSlideUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .HomePageContainer {
   flex-direction: column;
   gap: 16px;
+  opacity: 0;
+  animation: fadeInSlideUp 1s ease-out forwards;
 }
 
 @media screen and (min-width: 1280px) {
