--- a/src/components/SignUpForm/SignUpForm.module.css
+++ b/src/components/SignUpForm/SignUpForm.module.css
@@ -3,20 +3,13 @@
   background: var(--light-gray);
   padding: 24px 16px;
   text-align: left;
-  max-width: 100%;
+  width: 100%;
 }
 
 .SignUpForm {
-  /* display: grid;
-  align-content: center;
-  gap: 16px;
-  justify-items: start;
-  min-width: 256px; */
   display: flex;
   flex-direction: column;
-
   gap: 16px;
-
   min-width: 256px;
 }
 
@@ -32,6 +25,8 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+  font-size: 14px;
+  font-weight: 700;
 }
 
 .wrapPass {
@@ -88,6 +83,8 @@
   gap: 10px;
   border-radius: 30px;
   background: var(--light-green);
+  font-size: 14px;
+  font-weight: 700;
 }
 
 .btn:hover,
