--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,3 @@
-@import-normalize;
-/* bring in normalize.css styles */
-
 *,
 *::before,
 *::after {
@@ -19,9 +16,11 @@
   --light-gray: #f0eff4;
   --light-gray-disabled: #bcbcbc;
   --light-red: #ef5050;
-  --linear-gradient: linear-gradient(3deg,
-      rgba(155, 225, 160, 0) 1.54%,
-      #9be1a0 93.64%);
+  --linear-gradient: linear-gradient(
+    3deg,
+    rgba(155, 225, 160, 0) 1.54%,
+    #9be1a0 93.64%
+  );
   --animation: 0.4s cubic-bezier(0.5, -0.45, 0.5, 1.45);
 }
 
@@ -111,4 +110,5 @@ input {
   }
 }
 
-@media screen and (min-width: 1440px) {}
+@media screen and (min-width: 1440px) {
+}
