--- a/src/components/GoogleBtn/GoogleBtn.module.css
+++ b/src/components/GoogleBtn/GoogleBtn.module.css
@@ -42,6 +42,12 @@
 
 @media screen and (min-width: 768px) {
   .Google {
+    font-size: 16px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .Google {
     width: 436px;
     font-size: 16px;
   }
