--- a/src/components/SignUpForm/SignUpForm.module.css
+++ b/src/components/SignUpForm/SignUpForm.module.css
@@ -1,16 +1,16 @@
 .SignUpContainer {
+  width: 100%;
   border-radius: 30px;
   background: var(--light-gray);
   padding: 24px 16px;
   text-align: left;
-  width: 100%;
 }
 
 .SignUpForm {
+  min-width: 256px;
   display: flex;
   flex-direction: column;
   gap: 16px;
-  min-width: 256px;
 }
 
 .logo {
@@ -19,6 +19,7 @@
 
 .SignText {
   margin-bottom: 16px;
+  font-size: 32px;
 }
 
 .inputDiv {
@@ -111,25 +112,34 @@
 
 @media screen and (min-width: 768px) {
   .SignUpContainer {
-    width: 704px;
+    width: 672px;
     padding: 32px;
   }
   .SignUpForm {
     padding: 102px;
   }
+
+  .SignText {
+    font-size: 36px;
+  }
+  .inputDiv {
+    font-size: 16px;
+  }
   .toggle {
     display: block;
+  }
+  .btn {
+    font-size: 16px;
   }
   .logo {
     margin-bottom: 69px;
   }
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1440px) {
   .SignUpContainer {
-    width: 672px;
     gap: 32px;
-    min-height: 754px;
+    height: 754px;
   }
   .SignUpForm {
     padding: 0 102px;
