--- a/src/pages/SignUpPage/SignUpPage.module.css
+++ b/src/pages/SignUpPage/SignUpPage.module.css
@@ -12,6 +12,7 @@
   .SignUpPageContainer {
     flex-direction: row;
     gap: 32px;
+    justify-content: center;
   }
   .advantages {
     display: block;
