--- a/src/components/GoogleBtn/GoogleBtn.module.css
+++ b/src/components/GoogleBtn/GoogleBtn.module.css
@@ -1,4 +1,14 @@
 .Google {
+}
+
+.Google:hover,
+.Google:focus {
+  background: var(--light-green);
+  transform: 250s;
+  border: none;
+}
+
+.Google {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -11,18 +21,18 @@
   text-align: center;
   height: 50px;
   padding: 14px 28px;
-  border: 1px solid var(--dark-blue);
   color: var(--dark-blue);
   background: transparent;
+  padding: 0.7em 1.7em;
+  background: #e8e8e8;
+  cursor: pointer;
+  transition: all 0.3s;
+  box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
 }
 
-.Google:hover,
-.Google:focus {
-  background: var(--light-green);
-  transform: 250s;
-  border: none;
+.Google:active {
+  box-shadow: 4px 4px 12px #c5c5c5, -4px -4px 12px #ffffff;
 }
-
 .Google:disabled {
   opacity: 0.2;
   border-color: (var--dark-blue);
