--- a/src/components/SignInForm/SignInForm.module.css
+++ b/src/components/SignInForm/SignInForm.module.css
@@ -172,7 +172,7 @@
   outline: none;
 }
 
-.signInBtn {
+/* /* .signInBtn {
   display: flex;
   height: 50px;
   padding: 16px 131px;
@@ -185,13 +185,38 @@
   font-weight: 700;
   transition: background 0.3s ease, box-shadow 0.3s ease;
   transition: background-color 0.3s ease;
-}
+} */
 
 .signInBtn:hover,
 .signInBtn:focus {
   background: #87d28d;
   box-shadow: 0 0 10px rgba(177, 138, 189, 0.7);
   cursor: pointer;
+}
+
+.signInBtn {
+  display: flex;
+  height: 50px;
+  padding: 16px 131px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 30px;
+  background: var(--Accent, #9be1a0);
+  color: var(--dark-blue);
+  font-size: 14px;
+  font-weight: 700;
+  padding: 0.7em 1.7em;
+  background: var(--Accent, #9be1a0);
+  cursor: pointer;
+  border: 1px solid #e8e8e8;
+  transition: all 0.3s;
+  box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
+  transition: background 0.3s ease, box-shadow 0.3s ease;
+  transition: background-color 0.3s ease;
+}
+
+.signInBtn:active {
+  box-shadow: 4px 4px 12px #c5c5c5, -4px -4px 12px #ffffff;
 }
 
 .signupoffer {
