--- a/src/components/SignInForm/SignInForm.module.css
+++ b/src/components/SignInForm/SignInForm.module.css
@@ -11,6 +11,17 @@
   }
 }
 
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(-30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
 @keyframes fadeIn {
   0% {
     opacity: 0;
@@ -27,7 +38,7 @@
   padding: 24px 16px;
   text-align: left;
   width: 100%;
-  opacity: 0;
+  opacity: 1;
   animation: fadeIn 1s ease-out forwards;
   animation-delay: 0.3s;
 }
@@ -44,7 +55,7 @@
   justify-content: center;
   align-items: center;
   opacity: 0;
-  animation: fadeInUp 1s ease-out forwards;
+  animation: fadeInRight 1s ease-out forwards;
   animation-delay: 0.8s;
 }
 
@@ -57,7 +68,7 @@
   letter-spacing: -0.36px;
   margin-bottom: 32px;
   opacity: 0;
-  animation: fadeInUp 1s ease-out forwards;
+  animation: fadeInRight  1s ease-out forwards;
   animation-delay: 1s;
 }
 
@@ -67,7 +78,7 @@
   gap: 16px;
   min-width: 256px;
   opacity: 0;
-  animation: fadeInUp 1s ease-out forwards;
+  animation: fadeInRight 1s ease-out forwards;
   animation-delay: 1.2s;
 }
 
@@ -107,7 +118,6 @@
   font-weight: 400;
   line-height: 18px;
   letter-spacing: -0.14px;
-  transition: border-color 0.3s ease, background-color 0.3s ease, color 0.3s ease;
 }
 
 .input:focus {
@@ -148,10 +158,6 @@
   text-decoration-line: underline;
 }
 
-.forgotPassword, .signuplink {
-  transition: color 0.3s ease;
-}
-
 .forgotPassword:hover, .signuplink:hover {
   color: #527452;
 }
@@ -180,8 +186,6 @@
   color: var(--dark-blue);
   font-size: 14px;
   font-weight: 700;
-  transition: background 0.3s ease, box-shadow 0.3s ease;
-  transition: background-color 0.3s ease;
 }
 
 .signInBtn:hover,
