--- a/src/components/WaterMainInfo/WaterMainInfo.module.css
+++ b/src/components/WaterMainInfo/WaterMainInfo.module.css
@@ -19,10 +19,10 @@
 .tourBtn{
   display: flex;
   flex-direction: column;
-  width: 160px;
-  margin-top:50px;
-  margin-left: 150px;
 
+  margin-top:50px;
+
+width:160px;
   align-items: center;
   padding: 8px 14px;
   border-radius: 30px;
@@ -35,6 +35,8 @@
   letter-spacing: -0.14px;
   cursor: pointer;
   transform: rotate(90deg);
+  margin-left: 160px;
+
 
 }
 .tourBtn:hover, .tourBtn:focus{
@@ -42,7 +44,12 @@
   color: var(--white);
 }
 
+@media screen and (min-width: 375px) and (max-width: 550px){
+  .tourBtn{
+    margin-left: 250px;
+  }
 
+}
 
 @media screen and (min-width: 768px) {
   .tourBtn{
@@ -59,6 +66,7 @@
     padding: 33px 33px 39px;
   }
 }
+
 
 @media screen and (min-width: 1440px) {
 
