--- a/src/components/WaterMainInfo/WaterMainInfo.module.css
+++ b/src/components/WaterMainInfo/WaterMainInfo.module.css
@@ -19,9 +19,8 @@
 .tourBtn{
   display: flex;
   flex-direction: column;
-
-  margin-top:50px;
-
+margin-top: 8px;
+margin-left: -8px;
 width:160px;
   align-items: center;
   padding: 8px 14px;
@@ -34,8 +33,8 @@ width:160px;
   line-height: 1.28;
   letter-spacing: -0.14px;
   cursor: pointer;
-  transform: rotate(90deg);
-  margin-left: 160px;
+  /* transform: rotate(90deg); */
+  /* margin-left: 160px; */
 
 
 }
@@ -44,18 +43,12 @@ width:160px;
   color: var(--white);
 }
 
-@media screen and (min-width: 375px) and (max-width: 550px){
-  .tourBtn{
-    margin-left: 250px;
-  }
-
-}
 
 @media screen and (min-width: 768px) {
   .tourBtn{
-    margin-left: auto;
-    margin-top: 0px;
+    margin-top: 12px;
 
+width: 170px;
     font-size: 18px;
     transform: rotate(0deg);
   }
