--- a/src/components/UserSettingsModal/UserSettingsModal.module.css
+++ b/src/components/UserSettingsModal/UserSettingsModal.module.css
@@ -8,6 +8,28 @@
 .settingsHeader{
     margin-bottom: 20px;
 }
+.tourBtn{
+  display: flex;
+  flex-direction: column;
+margin-top: 8px;
+margin-left: -8px;
+width:160px;
+  align-items: center;
+  padding: 8px 14px;
+  border-radius: 30px;
+  background-color: transparent;
+  color: var(--dark-blue);
+  border: 1px solid var(--dark-blue);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.28;
+  letter-spacing: -0.14px;
+  cursor: pointer;}
+
+.tourBtn:hover {
+  background-color: var(--dark-blue);
+  color: var(--white)
+}
 
 @media only screen and (min-width: 768px) {
    .modalContainer{
