--- a/src/components/CalendarItem/CalendarItem.module.css
+++ b/src/components/CalendarItem/CalendarItem.module.css
@@ -13,6 +13,18 @@
   letter-spacing: -0.14px;
   cursor: pointer;
 }
+.currentDay{
+  background-color: var(--dark-blue);
+  color:var(--light-green);
+}
+
+.waterPercentage{
+  color: rgba(47, 47, 47, 0.60);
+font-size: 12px;
+font-style: normal;
+font-weight: 400;
+line-height: 1.86;
+}
 
 @media screen and (min-width: 768px) {
   .btnDay {
