--- a/src/components/ResetPasswordForm/ResetPasswordForm.module.css
+++ b/src/components/ResetPasswordForm/ResetPasswordForm.module.css
@@ -93,25 +93,35 @@
 }
 
 .resetBtn {
-  margin-bottom: 16px;
   display: flex;
-  width: 100%;
-  max-width: 300px;
   height: 50px;
+  padding: 16px;
   justify-content: center;
   align-items: center;
   border-radius: 30px;
-  background: var(--Accent, #9be1a0);
-  color: var(--dark-blue);
   font-size: 14px;
   font-weight: 700;
-  line-height: 18px;
+  padding: 0.7em 1.7em;
+  color: var(--dark-blue);
+  background-color: var(--Accent, #9be1a0);
   cursor: pointer;
+  border: 1px solid #e8e8e8;
+  transition: all 0.5s;
+  box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
 }
 
 .resetBtn:hover,
 .resetBtn:focus {
+  background-color: var(--light-green-hover);
+  box-shadow: 0 0 10px rgba(177, 138, 189, 0.7);
+  cursor: pointer;
+}
+
+.resetBtn:active {
+  box-shadow: 4px 4px 12px #c5c5c5, -4px -4px 12px #ffffff;
   background: #87d28d;
+  cursor: pointer;
 }
 
 .message {
