--- a/src/components/ForgotPasswordForm/ForgotPasswordForm.module.css
+++ b/src/components/ForgotPasswordForm/ForgotPasswordForm.module.css
@@ -1,50 +1,86 @@
 @import '../../index.css';
 
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(-30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .infoContainer {
+  max-width: 343px;
   width: 100%;
-  max-width: 500px;
   border-radius: 30px;
   background: var(--light-gray);
   padding: 24px 16px;
-  margin: 40px auto;
   text-align: left;
+  opacity: 1;
+  animation: fadeIn 1s ease-out forwards;
+  animation-delay: 0.3s;
 }
 
 .logo {
-  margin-bottom: 40px;
-  text-align: center;
+  margin-bottom: 150px;
+  opacity: 0;
+  animation: fadeInUp 1s ease-out forwards;
+  animation-delay: 0.5s;
 }
 
 .formContainer {
-  padding-left: 16px;
-  padding-right: 16px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
+  max-width: 311px;
+  margin: 0 auto 50px;
+  opacity: 0;
+  animation: fadeInRight 1s ease-out forwards;
+  animation-delay: 0.8s;
 }
 
 .title {
   color: var(--dark-blue);
   font-size: 32px;
-  font-style: normal;
   font-weight: 700;
   line-height: 32px;
   letter-spacing: -0.36px;
   margin-bottom: 32px;
-  text-align: center;
-  width: 100%;
+  opacity: 0;
+  animation: fadeInRight 1s ease-out forwards;
+  animation-delay: 1s;
 }
 
 .form {
   display: flex;
-  align-content: center;
   flex-direction: column;
   padding: 16px;
   gap: 16px;
   width: 100%;
-  align-items: center;
+  opacity: 0;
+  animation: fadeInRight 1s ease-out forwards;
+  animation-delay: 1.2s;
 }
 
 .inputBox {
@@ -107,11 +143,25 @@
   font-weight: 700;
   line-height: 18px;
   cursor: pointer;
+  border: 1px solid #e8e8e8;
+  transition: all 0.5s;
+  box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
+  background: var(--Accent, #9be1a0);
+  transition: background-color 0.3s ease;
 }
 
 .resetBtn:hover,
 .resetBtn:focus {
   background: #87d28d;
+  box-shadow: 0 0 10px rgba(177, 138, 189, 0.7);
+  cursor: pointer;
+}
+
+.resetBtn:active {
+  box-shadow: 4px 4px 12px #c5c5c5, -4px -4px 12px #ffffff;
+  background: #87d28d;
+  cursor: pointer;
 }
 
 .message {
@@ -140,13 +190,18 @@
 
 @media screen and (min-width: 768px) {
   .infoContainer {
-    max-width: 600px;
+    min-width: 704px;
     padding: 32px;
   }
 
-  .title {
-    font-size: 36px;
-    line-height: 38px;
+  .formContainer {
+    display: flex;
+    flex-direction: column;
+    min-width: 436px;
+  }
+
+  .logo {
+    margin-bottom: 69px;
   }
 
   .input {
@@ -156,5 +211,16 @@
   .resetBtn {
     max-width: 400px;
     height: 60px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .infoContainer {
+    margin: 0;
+    min-height: 754px;
+    width: 672px;
+  }
+  .logo {
+    margin-bottom: 113px;
   }
 }
