--- a/src/pages/ForgotPassword/ForgotPassword.module.css
+++ b/src/pages/ForgotPassword/ForgotPassword.module.css
@@ -1,5 +1,7 @@
-.SignUpPageContainer {
+.ForgotContainer {
+  display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .advantages {
@@ -7,7 +9,7 @@
 }
 
 @media screen and (min-width: 1440px) {
-  .SignUpPageContainer {
+  .ForgotContainer {
     flex-direction: row;
     gap: 32px;
     justify-content: center;
