--- a/src/components/LogOutModal/LogOutModal.module.css
+++ b/src/components/LogOutModal/LogOutModal.module.css
@@ -1,7 +1,9 @@
 /* Mobile 320px */
 .modalBox {
-  width: 316px;
-  margin: 40px 14px;
+  /* width: 316px; */
+  width: 100%;
+  max-height: 164px;
+  /* margin: 40px 14px; */
   display: grid;
   justify-content: center;
   align-content: center;
@@ -35,7 +37,9 @@
 }
 
 .btn {
-  width: 304px;
+  min-width: 200px;
+  max-width: 304px;
+  width: 100%;
   height: 46px;
   padding: 14px 0;
   display: flex;
