--- a/src/components/LogOutModal/LogOutModal.module.css
+++ b/src/components/LogOutModal/LogOutModal.module.css
@@ -1,7 +1,7 @@
 /* Mobile 320px */
 .modalBox {
-  width: 316px;
-  margin: 40px 14px;
+  max-width: 343px;
+  max-height: 164px;
   display: grid;
   justify-content: center;
   align-content: center;
@@ -35,9 +35,9 @@
 }
 
 .btn {
-  width: 304px;
+  max-width: 304px;
   height: 46px;
-  padding: 14px 0;
+  padding: 14px 80px;
   display: flex;
   justify-content: center;
   align-content: center;
@@ -78,7 +78,7 @@
 /* Tablet 768px */
 @media screen and (min-width: 768px) {
   .modalBox {
-    width: 436px;
+    max-width: 436px;
     margin: 40px 0;
   }
 
