Updated all buttons

--- a/src/components/ResetPasswordForm/ResetPasswordForm.module.css
+++ b/src/components/ResetPasswordForm/ResetPasswordForm.module.css
@@ -101,17 +101,34 @@
   justify-content: center;
   align-items: center;
   border-radius: 30px;
-  background: var(--Accent, #9be1a0);
+  background-color: var(--Accent, #9be1a0);
   color: var(--dark-blue);
   font-size: 14px;
   font-weight: 700;
   line-height: 18px;
   cursor: pointer;
+  border: 1px solid #e8e8e8;
+  transition: all 0.5s;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
+  box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px var(--white);
 }
 
 .resetBtn:hover,
 .resetBtn:focus {
-  background: #87d28d;
+  background-color: #87d28d;
+  box-shadow: 0 0 10px rgba(177, 138, 189, 0.7);
+  cursor: pointer;
+}
+
+.resetBtn:active {
+  box-shadow: 4px 4px 12px #c5c5c5, -4px -4px 12px var(--white);
+  background-color: #87d28d;
+  cursor: pointer;
+}
+
+.resetBtn:hover,
+.resetBtn:focus {
+  background-color: #87d28d;
 }
 
 .message {
