--- a/src/components/AddWaterBtn/AddWaterBtn.module.css
+++ b/src/components/AddWaterBtn/AddWaterBtn.module.css
@@ -12,7 +12,20 @@
   font-weight: 700;
   line-height: 1.28;
   letter-spacing: -0.14px;
+  padding: 0.7em 1.7em;
   cursor: pointer;
+  border: 1px solid #e8e8e8;
+  transition: all 0.3s;
+  box-shadow: 2px 2px 4px #c5c5c5, -2px -2px 4px var(--white);
+}
+
+.addWaterBtnMainInfo:hover,
+.addWaterBtnMainInfo:focus {
+  border: 1px solid var(--white);
+}
+
+.addWaterBtnMainInfo:active {
+  box-shadow: 2px 2px 4px #c5c5c5, -2px -2px 4px var(--white);
 }
 
 .addWaterBtnDetailedInfo {
