--- a/src/components/LogOutModal/LogOutModal.module.css
+++ b/src/components/LogOutModal/LogOutModal.module.css
@@ -1,7 +1,7 @@
 /* Mobile 320px */
 .modalBox {
-  width: 316px;
-  margin: 40px 14px;
+  max-width: 343px;
+  max-height: 164px;
   display: grid;
   justify-content: center;
   align-content: center;
@@ -35,9 +35,9 @@
 }
 
 .btn {
-  width: 304px;
+  max-width: 304px;
   height: 46px;
-  padding: 14px 0;
+  padding: 14px 80px;
   display: flex;
   justify-content: center;
   align-content: center;
@@ -49,6 +49,9 @@
   text-align: center;
   border-radius: 30px;
   transition: background-color var(--animation);
+  border: 1px solid #e8e8e8;
+  transition: all 0.3s;
+  box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px var(--white);
 }
 
 .colorBtn {
@@ -78,7 +81,7 @@
 /* Tablet 768px */
 @media screen and (min-width: 768px) {
   .modalBox {
-    width: 436px;
+    max-width: 436px;
     margin: 40px 0;
   }
 
