--- a/src/components/WaterMainInfo/WaterMainInfo.module.css
+++ b/src/components/WaterMainInfo/WaterMainInfo.module.css
@@ -14,14 +14,13 @@
   padding-bottom: 32px;
 }
 
-
-
-.tourBtn{
+.tourBtn {
   display: flex;
   flex-direction: column;
-margin-top: 8px;
-margin-left: -8px;
-width:160px;
+  margin-top: 8px;
+  margin-left: -8px;
+  margin-bottom: 16px;
+  width: 140px;
   align-items: center;
   padding: 8px 14px;
   border-radius: 30px;
@@ -33,21 +32,20 @@ width:160px;
   line-height: 1.28;
   letter-spacing: -0.14px;
   cursor: pointer;
-
-
-
-}
-.tourBtn:hover, .tourBtn:focus{
-  background-color: var(--dark-blue);
-  color: var(--white);
+  border: 1px solid var(--light-green);
+  transition: all 0.3s;
+  box-shadow: 2px 2px 4px #c5c5c5, -2px -2px 4px var(--white);
 }
 
+.tourBtn:hover,
+.tourBtn:focus {
+  border: 1px solid var(--white);
+}
 
 @media screen and (min-width: 768px) {
-  .tourBtn{
+  .tourBtn {
     margin-top: 12px;
-
-width: 170px;
+    width: 170px;
     font-size: 18px;
     transform: rotate(0deg);
   }
@@ -59,9 +57,7 @@ width: 170px;
   }
 }
 
-
 @media screen and (min-width: 1440px) {
-
   .section {
     width: 672px;
     min-height: calc(100vh - 64px);
