--- a/src/components/CalendarItem/CalendarItem.module.css
+++ b/src/components/CalendarItem/CalendarItem.module.css
@@ -18,9 +18,18 @@
   color:var(--light-green);
 }
 
+.itemContainer{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap:6px;
+
+}
+
 .waterPercentage{
   color: rgba(47, 47, 47, 0.60);
-font-size: 12px;
+font-size: 10px;
 font-style: normal;
 font-weight: 400;
 line-height: 1.86;
@@ -33,5 +42,9 @@ line-height: 1.86;
     letter-spacing: -0.16px;
     width: 38px;
     height: 38px;
+  }
+  .waterPercentage{
+    font-size: 12px;
+
   }
 }
